<resources>
    <string name="app_name">RuruNote_1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="price_string">價錢</string>
    <string name="add_string">新增</string>
    <string name="amount_string">數量</string>
    <string name="itemname_string">品項</string>
    <string name="address_string">地點</string>
</resources>
